fix bg image not showing

--- a/src/templates/sass/home.sass
+++ b/src/templates/sass/home.sass
@@ -73,6 +73,7 @@
 .dark-mode
   #service-slider
     border: 0.01rem solid v.$dark-fg
+    background-image: url(../assets/listenbrainz-logo.svg)
 
     &:before
       border: 0.01rem solid v.$dark-fg
